package world;

public class ONBException extends Exception {

    public ONBException(String message) {
        super(message);
    }
}
