package world;

public class PolygonException extends Exception {
	
	public PolygonException(String message) {
		super(message);
	}
}
