@startuml

title __WORLD's Class Diagram__\n

  package world {
    class ONB3D {
        + ONB3D()
        + getVectors()
    }
  }
  

  package world {
    class ONBException {
        + ONBException()
    }
  }
  

  abstract class PrintStreamOrWriter {
      - PrintStreamOrWriter()
      {abstract} ~ lock()
      {abstract} ~ println()
  }
  

  class SentinelHolder {
      {static} + STACK_TRACE_ELEMENT_SENTINEL : StackTraceElement
      {static} + STACK_TRACE_SENTINEL : StackTraceElement[]
      - SentinelHolder()
  }
  

  class WrappedPrintStream {
      - printStream : PrintStream
      ~ WrappedPrintStream()
      ~ lock()
      ~ println()
  }
  

  class WrappedPrintWriter {
      - printWriter : PrintWriter
      ~ WrappedPrintWriter()
      ~ lock()
      ~ println()
  }
  

  package world {
    class Octree {
        {static} - octree : Octree
        {static} + SHOW_BOUNDING : boolean
        {static} - dimension_map : int[][]
        - depth : int
        - size : int
        - octants : Octree[]
        - nodes : ArrayList<EngineObject>
        - changed : boolean
        - Octree()
        {static} + get()
        {static} + toggleShowBounding()
        + draw()
        + update()
        + detectCollisions()
        + detectCollisions()
        + detectCollisions()
        + getParent()
        + getOctants()
        + createOctants()
        + insertNode()
        + removeNode()
        + contains()
        + getNodeContainer()
        + empty()
        + emptyRecursive()
        + getNodes()
        + getNodesRecursive()
        + encloses()
        + getBounding()
        + getMapping()
        + toString()
    }
  }
  

  package world {
    class Point3D {
        - x : float
        - y : float
        - z : float
        {static} + ROOT : Point3D
        + Point3D()
        + Point3D()
        + Point3D()
        + Point3D()
        + getX()
        + getY()
        + getZ()
        + setX()
        + setY()
        + setZ()
        + set()
        + move()
        + move()
        + moveTo()
        + getVector()
        + getBlockDistance()
        + getEuclideanDistance()
        + getArray()
        + equals()
        + toString()
        + toStringShort()
    }
  }
  

  package world {
    class Polygon {
        - points : Point3D[]
        - vectors : Vector3D[]
        - r : float
        - g : float
        - b : float
        + Polygon()
        + getPoints()
        + draw()
        + setColor()
        + onPlane()
    }
  }
  

  package world {
    class PolygonException {
        + PolygonException()
    }
  }
  

  abstract class PrintStreamOrWriter {
      - PrintStreamOrWriter()
      {abstract} ~ lock()
      {abstract} ~ println()
  }
  

  class SentinelHolder {
      {static} + STACK_TRACE_ELEMENT_SENTINEL : StackTraceElement
      {static} + STACK_TRACE_SENTINEL : StackTraceElement[]
      - SentinelHolder()
  }
  

  class WrappedPrintStream {
      - printStream : PrintStream
      ~ WrappedPrintStream()
      ~ lock()
      ~ println()
  }
  

  class WrappedPrintWriter {
      - printWriter : PrintWriter
      ~ WrappedPrintWriter()
      ~ lock()
      ~ println()
  }
  

  package world {
    class Vector3D {
        - x : float
        - y : float
        - z : float
        {static} + NULL_VECTOR : Vector3D
        + Vector3D()
        + Vector3D()
        + Vector3D()
        + Vector3D()
        + getX()
        + getY()
        + getZ()
        + setX()
        + setY()
        + setZ()
        + set()
        + add()
        + add()
        + subtract()
        + subtract()
        {static} + sum()
        {static} + difference()
        + stretch()
        + shrink()
        {static} + product()
        {static} + dot()
        {static} + cross()
        + getBlockLength()
        + getEuclideanLength()
        + normalize()
        + nullify()
        {static} + colinear()
        {static} + colinear_scale()
        + reverse()
        {static} + reverse()
        + getArray()
        + equals()
        + toString()
        + toStringShort()
    }
  }
  

  ONB3D o-- Vector3D : x
  ONB3D o-- Vector3D : y
  ONBException +-down- PrintStreamOrWriter
  ONBException +-down- SentinelHolder
  ONBException +-down- WrappedPrintStream
  ONBException +-down- WrappedPrintWriter
  Octree o-- Octree : parent
  Octree o-- Point3D : root
  Octree o-- Bounding : bounding
  Polygon o-- Vector3D : normal
  PolygonException +-down- PrintStreamOrWriter
  PolygonException +-down- SentinelHolder
  PolygonException +-down- WrappedPrintStream
  PolygonException +-down- WrappedPrintWriter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
